--- a/package.json
+++ b/package.json
@@ -19,24 +19,28 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@capacitor/android": "^1.5.2",
-    "@capacitor/core": "1.5.2",
+    "@capacitor/android": "^2.2.0",
+    "@capacitor/core": "^2.2.0",
+    "@capacitor/ios": "^2.2.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^1.5.2",
     "core-js": "^2.5.4",
+    "ng-katex": "^2.0.3",
+    "ng2-pdf-viewer": "^6.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
+    "@angular-devkit/build-angular": "^0.901.8",
+    "@angular/cli": "~9.1.5",
+    "@angular/compiler": "~9.1.6",
+    "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "1.5.2",
+    "@capacitor/cli": "^2.2.0",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
